[package]
authors = ["Aivan Monceller <aivan@monceller.com>"]
edition = "2018"
name = "call-swapi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde_json = "1.0.61"
